fix fullbleed images having space around them from being inline

--- a/assets/scss/pages/_projects.scss
+++ b/assets/scss/pages/_projects.scss
@@ -229,7 +229,8 @@
     }
   }
 
-  .project-images {
+  // Full width images (old style)
+  .fullbleed-images {
     margin: 0;
     img {
       width: 100%;
